--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -101,7 +101,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            {% if is_granted('ROLE_ADMIN') %}
+                            {#{% if is_granted('ROLE_ADMIN') %}#}
                                 <ul class="list-inline">
                                     <li>
                                         <a href="{{ path('admin_arreta_edit', { 'id': arreta.id }) }}"><i class="fa fa-edit"></i></a>
@@ -112,7 +112,7 @@
                                         {{ form_end(deleteforms[arreta.id]) }}
                                     </li>
                                 </ul>
-                            {% endif %}
+                            {#{% endif %}#}
                         </td>
                     </tr>
                 {% endfor %}
