Arreta bat gorde eta Gorde+Itxi botoiak

--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -5,8 +5,8 @@
     <div class="row">
         <div class="col-md-4">
             <div class="btn-group" role="group" aria-label="Default button group">
-                <a id="btnArretaBerria" class="btn btn-primary" href="#">{{ "Arreta Berria" | trans }}</a>
-                <a id="btnArretaGorde" class="btn btn-primary btn-success" href="#">{{ "Arreta Amaitu" | trans }}</a>
+                <a id="btnArretaSave" class="btn btn-primary" href="#">{{ "Arreta Gorde" | trans }}</a>
+                <a id="btnArretaClose" class="btn btn-primary btn-success" href="#">{{ "Arreta Itxi" | trans }}</a>
                 <a id="btnArretaEzabatu" class="btn btn-primary btn-danger" href="#">{{ "Arreta Ezabatu" | trans }}</a>
             </div>
         </div>
