--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -6,7 +6,6 @@
         <div class="col-md-10">
 
             <div class="row">
-                <div class="col-xs-2">&nbsp;</div>
                 {% if is_granted('ROLE_ADMIN') %}
                     <div class="col-xs-5">
                         {{ "Arretak guztira" | trans }} <span class="label label-success">{{ arretas|length }}</span>
@@ -15,11 +14,14 @@
                         {{ "Gaurko arretak" | trans }} <span class="label label-success">{{ arretakGaur.zenbat }}</span>
                     </div>
                 {% else %}
-                    <div class="col-xs-5">
+                    <div class="col-xs-4">
                         {{ "Zure arretak guztira" | trans }} <span class="label label-success">{{ arretas|length }}</span>
                     </div>
-                    <div class="col-xs-5">
+                    <div class="col-xs-4">
                         {{ "Zure gaurko arretak" | trans }} <span class="label label-success">{{ arretakGaur.zenbat }}</span>
+                    </div>
+                    <div class="col-xs-4">
+                        {{ 'HAZ/SAC gaur' | trans }} <span class="label label-primary">{% if arretakGaurDenak.zenbat is defined %}{{ arretakGaurDenak.zenbat }}{% endif %}</span>
                     </div>
                 {% endif %}
                 
