--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -11,7 +11,7 @@
                         {{ "Arretak guztira" | trans }} <span class="label label-success">{{ arretas|length }}</span>
                     </div>
                     <div class="col-xs-5">
-                        {{ "Gaurko arretak" | trans }} <span class="label label-success">{{ arretakGaur.zenbat }}</span>
+                        {{ "Gaurko arretak" | trans }} <span class="label label-success">{{ arretakGaur }}</span>
                     </div>
                 {% else %}
                     <div class="col-xs-4">
