--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -313,7 +313,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 spinnerPlace">
                             <div class="form-group">
                                 <select id="cmbFitxa" multiple class="form-control" size="9">
                                 </select>
