--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -148,6 +148,7 @@
         <script src="{{ asset('js/bootbox.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap-datepicker.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap-datepicker.eu.min.js') }}"></script>
+        <script src="{{ asset('js/spin.js') }}"></script>
         <script src="{{ asset('js/app.js') }}"></script>
     {#{% else %}#}
         {#<script src="{{ asset('js/jquery.min.js') }}"></script>#}
