spinner while ajax

--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -313,8 +313,9 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col-sm-6 spinnerPlace">
-                            <div class="form-group">
+                        <div class="col-sm-6">
+                            <img id="spinnerPlace" src="{{ asset('img/spinner-gif-13.gif') }}" style="display: none;">
+                            <div id="afterSpinner" class="form-group" style="display: none;">
                                 <select id="cmbFitxa" multiple class="form-control" size="9">
                                 </select>
                             </div>
