--- a/app/Resources/views/grafikak/index.html.twig
+++ b/app/Resources/views/grafikak/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'AvanzuAdminThemeBundle:layout:default-layout.html.twig' %}
 
+{% block aavanzu_document_title %} HAZtertu {% endblock %}
 {% block title %} HAZtertu {% endblock %}
 
 {% block page_title %} HAZtertu graf {% endblock %}
@@ -199,7 +200,7 @@
 
 {% endblock %}
 
-{% block javascripts %}
+{% block avanzu_javascripts %}
 
     {{ parent() }}
 
