--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -1,5 +1,41 @@
 {% extends 'base.html.twig' %}
 
+{% block head_style %}
+
+    {{  parent() }}
+
+    <link href="{{ asset('css/daterangepicker.min.css') }}" type="text/css" rel="stylesheet">
+    <link href="{{ asset('css/bootstrap-editable.css') }}" type="text/css" rel="stylesheet">
+    <link href="{{ asset('css/featherlight.min.css') }}" type="text/css" rel="stylesheet">
+
+    {#<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
+    {#<link rel="stylesheet" href="https://cdn.datatables.net/v/bs/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-colvis-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/fc-3.2.2/fh-3.1.2/r-2.1.0/datatables.min.css">#}
+    {#<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">#}
+    {#<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.css">#}
+    {#<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css">#}
+    {#<link rel="stylesheet" href="https://cdn.rawgit.com/noelboss/featherlight/1.7.1/release/featherlight.min.css">#}
+
+{% endblock head_style %}
+
+{% block head_script %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment-with-locales.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.js" charset="UTF-8"></script>
+    {#<script src="https://cdn.datatables.net/v/bs/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.13/af-2.1.3/b-1.2.4/b-flash-1.2.4/b-html5-1.2.4/b-print-1.2.4/cr-1.3.2/fc-3.2.2/fh-3.1.2/kt-2.2.0/r-2.1.1/rr-1.2.0/sc-1.4.2/se-1.2.0/datatables.min.js"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="https://cdn.rawgit.com/noelboss/featherlight/1.7.1/release/featherlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.full.min.js"></script>
+
+    <script type="text/javascript" src="{{ asset('js/datatables.min.js') }}"></script>
+    {#<script type="text/javascript" src="{{ asset('bundles/app/js/Basque.json') }}"></script>#}
+    {#<script type="text/javascript" src="{{ asset('bundles/app/js/Spanish.json') }}"></script>#}
+
+    <script src="{{ asset('bundles/sgdatatables/js/pipeline.js') }}"></script>
+    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
+{% endblock head_script %}
+
 {% block headline %}
     <div class="row">
         <div class="col-md-1"><a class="btn btn-success" href="{{ path('admin_arreta_new') }}">{{ "Arreta berria" | trans }}</a></div>
@@ -36,7 +72,7 @@
     </div>
 {% endblock headline %}
 
-{% block content_content %}
+{% block content_row %}
 
     <div class="row">
         <div class="col-md-12">
@@ -83,83 +119,23 @@
     <hr>
     <div class="row">
         <div class="col-md-12">
-            <table class="table table-striped" id="niredatatable">
-                <thead>
-                <tr>
-                    {#<th></th>#}
-                    <th>Id</th>
-                    <th>{{ "Langilea" | trans }}</th>
-                    <th>{{ "Kokalekua" | trans }}</th>
-                    <th>{{ "Data" | trans }}</th>
-                    <th>{{ "Nan" | trans }}</th>
-                    <th>{{ "Kanala" | trans }}</th>
-                    <th>{{ "Tramiteak" | trans }}</th>
-                    <th>{{ "Egoera" | trans }}</th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for arreta in arretas %}
-
-                    <tr>
-                        <td>
-                            <a href="{{ path('admin_arreta_edit', { 'id': arreta.id }) }}">{{ arreta.id }}</a>
-                        </td>
-                        <td>
-                            {{ arreta.user.username }}
-                        </td>
-                        <td>
-                            {{ arreta.user.barrutia }}
-                        </td>
-                        <td>
-                            {% if arreta.created %}
-                                {% if arreta.isclosed == true %}
-                                    {{ arreta.created|date('Y-m-d H:i:s') }}
-                                {% else %}
-                                    <a href="{{ path('admin_arreta_edit', { 'id': arreta.id }) }}">{{ arreta.created|date('Y-m-d H:i:s') }}</a>
-                                {% endif %}
-                            {% endif %}
-                        </td>
-                        <td>
-                            {{ arreta.nan }}
-                        </td>
-                        <td>
-                            {{ arreta.kanala }}
-                        </td>
-                        <td>
-                            <span class="label label-primary">{{ arreta.tramiteak | length }}</span>
-                        </td>
-                        <td>
-                            {% if arreta.isclosed == true %}
-                                <label class="label label-danger">Itxita</label>
-                            {% else %}
-                                <label class="label label-success">Irekita</label>
-                            {% endif %}
-                        </td>
-                        <td>
-
-                            <ul class="list-inline">
-                                <li>
-                                    <a href="{{ path('admin_arreta_edit', { 'id': arreta.id }) }}"><i class="fa fa-edit"></i> {{ "Aldatu" | trans }}</a>
-                                </li>
-                                <li>
-                                    {{ form_start(deleteforms[arreta.id],{'attr': {'id': 'deleteArretaForm' ~ arreta.id}}) }}
-                                    <a class="btnDelete" data-miid="{{ arreta.id }}" href="#"><i class="fa fa-trash text-danger"></i> {{ "Ezabatu" | trans }}</a>
-                                    {{ form_end(deleteforms[arreta.id]) }}
-                                </li>
-                            </ul>
-
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            {{ sg_datatables_render(datatable) }}
         </div>
     </div>
 
 {% endblock %}
 {% block foot_script %}
-    {{ parent() }}
+
+    {#{{ parent() }}#}
+
+    {#<script src="{{ asset('js/moment-with-locales.min.js') }}"></script>#}
+    {#<script src="{{ asset('js/daterangepicker.min.js') }}"></script>#}
+    {#<script src="{{ asset('js/bootstrap-editable.min.js') }}"></script>#}
+    {#<script src="{{ asset('js/featherlight.min.js') }}"></script>#}
+    {#<script src="{{ asset('bundles/sgdatatables/js/pipeline.js') }}"></script>#}
+
+
+
     <script>
         $(document).ready(function () {
             $(".btnDelete").on("click", function () {
