--- a/app/Resources/views/grafikak/index.html.twig
+++ b/app/Resources/views/grafikak/index.html.twig
@@ -1,5 +1,8 @@
 {% extends 'AvanzuAdminThemeBundle:layout:default-layout.html.twig' %}
 
+{% block avanzu_logo_path %}{{ path('homepage') }}{% endblock %}
+{% block avanzu_logo_mini %}<b>H</b>AZ{% endblock %}
+{% block avanzu_logo_lg %} HAZtertu {% endblock %}
 {% block aavanzu_document_title %} HAZtertu {% endblock %}
 {% block title %} HAZtertu {% endblock %}
 
